--- a/index.html
+++ b/index.html
@@ -1,56 +1,87 @@
 <!DOCTYPE html>
 <html lang="en">
-    <head>
-        <meta charset="utf-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-        <meta name="description"
-            content="Platinum Limo is a chauffeuring service located in Dublin, Ireland. We operate throughout the whole country providing first-class service to everybody who wants to avoid the trouble of catching a taxi, paying parking fees, or figuring out bus schedules.">
-        <meta name="author" content="Iris Smok">
-        <meta name="keywords"
-            content="Ireland, Dublin, Chauffer Services, Mercedes Benz, Mercedes Benz S Class, Mercedes Bens E Class, Mercedes Benz V Class, Special Occasions, Events, Airport Transfer, Conference & Conventions, Corporate Services, Luxury Tours">
-        <title>Platinum Limo - Chauffeur Services</title>
 
-        <link href="assets/style.css" rel="stylesheet" type="text/css">
-        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-aFq/bzH65dt+w6FI2ooMVUpc+21e0SRygnTpmBvdBgSdnuTN7QbdgL+OapgHtvPp" crossorigin="anonymous">
-    
-    </head>
+<head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <meta name="description"
+        content="Platinum Limo is a chauffeuring service located in Dublin, Ireland. We operate throughout the whole country providing first-class service to everybody who wants to avoid the trouble of catching a taxi, paying parking fees, or figuring out bus schedules.">
+    <meta name="author" content="Iris Smok">
+    <meta name="keywords"
+        content="Ireland, Dublin, Chauffer Services, Mercedes Benz, Mercedes Benz S Class, Mercedes Bens E Class, Mercedes Benz V Class, Special Occasions, Events, Airport Transfer, Conference & Conventions, Corporate Services, Luxury Tours">
+    <title>Platinum Limo - Chauffeur Services</title>
+
+    <!-- Google Fonts -->
+    <link rel="stylesheet" media="print" onload="this.onload=null;this.removeAttribute('media');"
+        href="https://fonts.googleapis.com/css2?family=Crimson+Text:wght@600&family=Lato&display=swap">
+
+    <link href="assets/style.css" rel="stylesheet" type="text/css">
+    <link  href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha2/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-aFq/bzH65dt+w6FI2ooMVUpc+21e0SRygnTpmBvdBgSdnuTN7QbdgL+OapgHtvPp" crossorigin="anonymous">
+
+</head>
+
 <body>
-<!-- Navbar -->
-<nav class="navbar navbar-expand-lg bg-dark " data-bs-theme="dark">
-    <div class="container-fluid">
-        <a class="navbar-brand" href="index.html"><img src="assets/images/navbar-logo.svg"
-                alt="Platinum Limo logo"></a>
-        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown"
-            aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
-            <i class="fas fa-bars fa-2xl"></i>
-        </button>
-        <div class="collapse navbar-collapse pr-5" id="navbarNavDropdown">
-            <ul class="navbar-nav text-uppercase ml-auto py-lg-0">
-                <li class="nav-item"><a class="nav-link active" href="index.html">Home</a></li>
-                <li class="nav-item dropdown dropdown-hover">
-                    <a class="nav-link dropdown-toggle" type="button" data-target="services.html" href="services.html" data-bs-toggle="dropdown" aria-expanded="false" id="navbarDropdown">
-                        Services
-                      </a>
-                    <ul class="dropdown-menu">
-                      <li><a class="dropdown-item" href="special-occasions.html">Special Occasions</a></li>
-                      <li><a class="dropdown-item" href="events.html">Events</a></li>
-                      <li><a class="dropdown-item" href="airport-transfer.html">Airport Transfer</a></li>
-                      <li><a class="dropdown-item" href="conference-conventions.html">Conference & Conventions</a></li>
-                      <li><a class="dropdown-item" href="corporate.html">Corporate Service</a></li>
-                      <li><a class="dropdown-item" href="tours.html">Luxury Tours</a></li>
-                    </ul>
+    <!-- Navbar -->
+    <nav class="navbar navbar-expand-lg">
+        <div class="container-fluid pe-4">
+            <a class="navbar-brand" href="index.html"><img src="assets/images/navbar-logo.svg" width="100%" height="100%"
+                    alt="Platinum Limo logo"></a>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown"
+                aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
+                <i class="fas fa-bars fa-2xl"></i>
+            </button>
+            <div class="collapse navbar-collapse pr-5" id="navbarNavDropdown">
+                <ul class="navbar-nav text-uppercase ml-auto py-lg-0">
+                    <li class="nav-item active"><a class="nav-link active" href="index.html">Home</a></li>
+                    <li class="nav-item dropdown dropdown-hover">
+                        <a class="nav-link dropdown-toggle" type="button" data-target="services.html"
+                            href="services.html" data-bs-toggle="dropdown" aria-expanded="false" id="navbarDropdown">
+                            Services
+                        </a>
+                        <ul class="dropdown-menu">
+                            <li><a class="dropdown-item" href="special-occasions.html">Special Occasions</a></li>
+                            <li><a class="dropdown-item" href="events.html">Events</a></li>
+                            <li><a class="dropdown-item" href="airport-transfer.html">Airport Transfer</a></li>
+                            <li><a class="dropdown-item" href="conference-conventions.html">Conference & Conventions</a>
+                            </li>
+                            <li><a class="dropdown-item" href="corporate.html">Corporate Service</a></li>
+                            <li><a class="dropdown-item" href="tours.html">Luxury Tours</a></li>
+                        </ul>
                     </li>
-                <li class="nav-item"><a class="nav-link" href="#our-fleet">Our Fleet</a></li>
-                <li class="nav-item"><a class="nav-link" href="#testimonials">Testimonials</a></li>
-                <li class="nav-item"><a class="nav-link" href="availability.html">Availability</a></li>
-                <li class="nav-item"><a class="nav-link" href="contact.html">Contact</a></li>
-            </ul>
+                    <li class="nav-item"><a class="nav-link" href="#our-fleet">Our Fleet</a></li>
+                    <li class="nav-item"><a class="nav-link" href="#testimonials">Testimonials</a></li>
+                    <li class="nav-item"><a class="nav-link" href="availability.html">Availability</a></li>
+                    <li class="nav-item"><a class="nav-link" href="contact.html">Contact</a></li>
+                </ul>
+            </div>
         </div>
-    </div>
-</nav>
-    
-<script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js" integrity="sha384-oBqDVmMz9ATKxIep9tiCxS/Z9fNfEXiDAYTujMAeBAsjFuCZSmKbSSUnQlmh/jp3" crossorigin="anonymous"></script>
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha2/dist/js/bootstrap.min.js" integrity="sha384-heAjqF+bCxXpCWLa6Zhcp4fu20XoNIA98ecBC1YkdXhszjoejr5y9Q77hIrv8R9i" crossorigin="anonymous"></script>
+    </nav>
+
+    <!-- Header image -->
+    <header class="header-image">
+        <div class="container">
+            <div class="subheading mb-4">First-class Chauffeur Service located in Dublin, Ireland</div>
+            <div class="heading text-uppercase mb-5">Your Luxury Chauffeur Service!</div>
+            <a class="btn border border-light btn-l text-uppercase rounded" href="availability.html">Book Your Trip
+                Now</a>
+
+        </div>
+    </header>
+
+
+
+
+    <!-- Font Awesome icons (free version)-->
+    <script src="https://use.fontawesome.com/releases/v6.1.0/js/all.js" crossorigin="anonymous"></script>
+
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js"
+        integrity="sha384-oBqDVmMz9ATKxIep9tiCxS/Z9fNfEXiDAYTujMAeBAsjFuCZSmKbSSUnQlmh/jp3" crossorigin="anonymous">
+    </script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha2/dist/js/bootstrap.min.js"
+        integrity="sha384-heAjqF+bCxXpCWLa6Zhcp4fu20XoNIA98ecBC1YkdXhszjoejr5y9Q77hIrv8R9i" crossorigin="anonymous">
+    </script>
 
 </body>
+
 </html>
