--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         href="https://fonts.googleapis.com/css2?family=Crimson+Text:wght@600&family=Lato&display=swap">
 
     <link href="assets/style.css" rel="stylesheet" type="text/css">
-    <link  href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha2/dist/css/bootstrap.min.css" rel="stylesheet"
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-aFq/bzH65dt+w6FI2ooMVUpc+21e0SRygnTpmBvdBgSdnuTN7QbdgL+OapgHtvPp" crossorigin="anonymous">
 
 </head>
@@ -25,8 +25,8 @@
     <!-- Navbar -->
     <nav class="navbar navbar-expand-lg">
         <div class="container-fluid pe-4">
-            <a class="navbar-brand" href="index.html"><img src="assets/images/navbar-logo.svg" width="100%" height="100%"
-                    alt="Platinum Limo logo"></a>
+            <a class="navbar-brand" href="index.html"><img src="assets/images/navbar-logo.svg" width="100%"
+                    height="100%" alt="Platinum Limo logo"></a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown"
                 aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
                 <i class="fas fa-bars fa-2xl"></i>
@@ -69,6 +69,38 @@
         </div>
     </header>
 
+    <!-- Introduction -->
+    <section class="introduction-section page-section pb-0">
+        <div class="container">
+            <div class="row">
+                <div class="col introduction-text">
+                    <div>
+                        <h2 class="section-heading text-uppercase text-center"> Platinum Limo</h2>
+                    </div>
+                    <div class="mt-5">
+                        <p><strong>Platinum Limo</strong> is a first-class chauffeur service located in Dublin, Ireland.
+                            Here at Platinum Limo, we provide a 32 County service (Republic of Ireland and Northern
+                            Ireland). <br>
+                            Our focus on professional standards and customer service ensures you to arrive
+                            <strong>wherever</strong> you
+                            need to be, <strong>on-time, stress free</strong> and in the <strong>utmost
+                                comfort</strong>.
+                            Luxury cars available at competitive rates! Whether you require an <strong>airport
+                                transfer</strong> or <strong>executive travel</strong>,
+                            our luxury fleet of vehicles is perfect for your <strong>professional needs</strong>. <br>
+                            We love what we do and we believe in exceeding our customer's expectations. <br>
+                            We are fully committed to maintain seamless luxury by providing prompt, professional,
+                            discreet and courteous service.
+                            At <strong>Platinum Limo</strong> we look forward to providing you with an exemplary
+                            travel experience,
+                            building a strong business relationship into the future.
+                        </p>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+
 
 
 
@@ -77,10 +109,10 @@
 
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js"
         integrity="sha384-oBqDVmMz9ATKxIep9tiCxS/Z9fNfEXiDAYTujMAeBAsjFuCZSmKbSSUnQlmh/jp3" crossorigin="anonymous">
-    </script>
+        </script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha2/dist/js/bootstrap.min.js"
         integrity="sha384-heAjqF+bCxXpCWLa6Zhcp4fu20XoNIA98ecBC1YkdXhszjoejr5y9Q77hIrv8R9i" crossorigin="anonymous">
-    </script>
+        </script>
 
 </body>
 
