Added features section and fixed introduction section responsivness

--- a/index.html
+++ b/index.html
@@ -100,7 +100,37 @@
             </div>
         </div>
     </section>
+    <section class="features p-5">
+        <div class="container">
+            <div class="row text-center">
+                <div class="col-md-4">
+                    <span class="fa-stack fa-4x">
+                        <i class="fa-regular fa-gem fa-stack-1x"></i>
+                    </span>
+                    <h4 class="my-1">Luxury & Comfort</h4>
+                    <p>We specialize in luxury car services for VIPs, corporate and private clients.
+                        Our services are extremely discreet and professional.</p>
+                </div>
+                <div class="col-md-4">
+                    <span class="fa-stack fa-4x">
+                        <i class="fa-regular fa-clock fa-stack-1x"></i>
+                    </span>
+                    <h4 class="my-1">Always on time</h4>
+                    <p>We guarantee you our drivers are always on time for your special occasion or
+                        special day.</p>
+                </div>
+                <div class="col-md-4">
+                    <span class="fa-stack fa-4x">
+                        <i class="fa-solid fa-user-tie fa-stack-1x"></i>
+                    </span>
+                    <h4 class="my-1">Professional Chauffeurs</h4>
+                    <p>Our chauffeurs are reliable, professional, friendly and cater to your needs.
+                        We guarantee the highest standard of service from our experienced chauffeurs. </p>
+                </div>
+            </div>
+        </div>
 
+    </section>
 
 
 
