Created services section

--- a/index.html
+++ b/index.html
@@ -100,6 +100,8 @@
             </div>
         </div>
     </section>
+
+    <!-- Features -->
     <section class="features p-5">
         <div class="container">
             <div class="row text-center">
@@ -132,6 +134,110 @@
 
     </section>
 
+    <!-- Services -->
+    <section class="page-section bg-services text-light" id="services">
+        <div class="container">
+            <div class="text-center">
+                <h2 class="section-heading text-uppercase">Services</h2>
+                <h3 class="section-subheading">Experience Luxury, comfort and reliability with Platinum Limo
+                    Limo Chauffeur services.</h3>
+            </div>
+            <div class="row">
+                <div class="col-lg-4 col-sm-6 mb-4">
+                    <!-- Services item 1-->
+                    <div class="services-item">
+                        <a class="services-link" href="special-occasions.html">
+
+                            <img class="img-fluid" src="https://res.cloudinary.com/irissmok/image/upload/v1681448863/Platinum%20Line%20images/special-occasions-normal_rjqxxw.webp" alt="Special Occasion">
+                            <div class="services-caption">
+                                <div class="services-caption-heading text-uppercase">Special occasion</div>
+                                <div class="services-caption-subheading">An Extra Dimension to Your special day</div>
+                            </div>
+                        </a>
+                    </div>
+                </div>
+                <div class="col-lg-4 col-sm-6 mb-4">
+                    <!-- Services item 2-->
+                    <div class="services-item">
+                        <a class="services-link" href="events.html">
+
+                            <img class="img-fluid"
+                                src="https://res.cloudinary.com/irissmok/image/upload/v1668123199/Platinum%20Line%20images/events_ldsg7p.webp"
+                                alt="Events">
+                            <div class="services-caption">
+                                <div class="services-caption-heading text-uppercase">Events</div>
+                                <div class="services-caption-subheading">Arrive in Style at Your Next Event</div>
+                            </div>
+                        </a>
+                    </div>
+                </div>
+                <div class="col-lg-4 col-sm-6 mb-4">
+                    <!-- Services item 3-->
+                    <div class="services-item">
+                        <a class="services-link" href="airport-transfer.html">
+
+                            <img class="img-fluid"
+                                src="https://res.cloudinary.com/irissmok/image/upload/v1668123224/Platinum%20Line%20images/airport-transfer_zfrxdg.webp"
+                                alt="Airport Transfer">
+                            <div class="services-caption">
+                                <div class="services-caption-heading text-uppercase">Airport Transfer</div>
+                                <div class="services-caption-subheading">Style and Comfort From Your Front Door</div>
+                            </div>
+                        </a>
+                    </div>
+                </div>
+                <div class="col-lg-4 col-sm-6 mb-4 mb-lg-0">
+                    <!-- Services item 4-->
+                    <div class="services-item">
+                        <a class="services-link" href="conference-conventions.html">
+
+                            <img class="img-fluid"
+                                src="https://res.cloudinary.com/irissmok/image/upload/v1668123224/Platinum%20Line%20images/conference_hcwlfc.webp"
+                                alt="Conference & Conventions">
+                            <div class="services-caption">
+                                <div class="services-caption-heading text-uppercase">Conference & Conventions</div>
+                                <div class="services-caption-subheading">Experience Dublin's Finest Business Chauffeur
+                                    Services</div>
+                            </div>
+                        </a>
+                    </div>
+                </div>
+                <div class="col-lg-4 col-sm-6 mb-4 mb-sm-0">
+                    <!-- Services item 5-->
+                    <div class="services-item">
+                        <a class="services-link" href="corporate.html">
+
+                            <img class="img-fluid"
+                                src="https://res.cloudinary.com/irissmok/image/upload/v1668123223/Platinum%20Line%20images/corporate-services_hcbf3w.webp"
+                                alt="Corporate Services">
+
+                            <div class="services-caption">
+                                <div class="services-caption-heading text-uppercase">Corporate Services</div>
+                                <div class="services-caption-subheading">Reliability and Exquisite Service</div>
+                            </div>
+                        </a>
+                    </div>
+                </div>
+                <div class="col-lg-4 col-sm-6">
+                    <!-- Services item 6-->
+                    <div class="services-item">
+                        <a class="services-link" href="tours.html">
+
+                            <img class="img-fluid"
+                                src="https://res.cloudinary.com/irissmok/image/upload/v1668123223/Platinum%20Line%20images/tours_jwakkh.webp"
+                                alt="Tours">
+
+                            <div class="services-caption">
+                                <div class="services-caption-heading text-uppercase ">Luxury Tours</div>
+                                <div class="services-caption-subheading">A Unique Way to Explore and Expereience Ireland
+                                </div>
+                            </div>
+                        </a>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
 
 
     <!-- Font Awesome icons (free version)-->
