--- a/index.html
+++ b/index.html
@@ -239,6 +239,76 @@
         </div>
     </section>
 
+    <!-- Our Fleet -->
+    <section class="page-section" id="our-fleet">
+        <div class="container">
+            <div class="row text-center">
+                <div class="col-12 text-center">
+                    <h2 class="section-heading text-uppercase"> The Platinum Limo Fleet</h2>
+                    <h3 class="section-subheading text-muted"> Experience quality, luxury and style when you travel with
+                        us. <br> <br>
+                        All of our vehicles are valeted and presented to the highest standard, and provide Air
+                        Conditioning, Wi-Fi and chilled bottled water. </h3>
+                </div>
+                <div class="col-sm-12 col-md-4">
+                    <div class="our-fleet-img">
+                        <a href="#car-spec">
+
+                            <img src="https://res.cloudinary.com/irissmok/image/upload/v1668123198/Platinum%20Line%20images/our-fleet-s-e_lenprv.webp" alt="Mercedes Benz E Class">
+                        </a>
+                        <p class="text-uppercase"> Mercedes Benz E Class</p>
+                        <div class="text-muted">
+                            <i class="fa-solid fa-user"></i>
+                            <span class="me-2">3</span>
+                            <i class="fa-solid fa-suitcase"></i>
+                            <span>3</span>
+                        </div>
+                        <div class="mt-4">
+                            <a class="btn text-uppercase rounded" href="availability.html">Book Your Trip Now</a>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-sm-12 col-md-4">
+                    <div class="our-fleet-img">
+                        <a href="#car-spec">
+                            <img src="https://res.cloudinary.com/irissmok/image/upload/v1668123198/Platinum%20Line%20images/our-fleet-s-e_lenprv.webp" alt="Mercedes Benz S Class">
+                        </a>
+
+                        <p class="text-uppercase"> Mercedes Benz S Class</p>
+                        <div class="text-muted">
+                            <i class="fa-solid fa-user"></i>
+                            <span class="me-2">3</span>
+                            <i class="fa-solid fa-suitcase"></i>
+                            <span>3</span>
+                        </div>
+                        <div class="mt-4">
+                            <a class="btn text-uppercase rounded" href="availability.html">Book Your Trip Now</a>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-sm-12 col-md-4">
+                    <div class="our-fleet-img">
+                        <a href="#car-spec">
+
+                            <img src="https://res.cloudinary.com/irissmok/image/upload/v1668123198/Platinum%20Line%20images/our-fleet-v_nrz1xw.webp" alt="Mercedes Benz V Class">
+                        </a>
+                        <p class="text-uppercase"> Mercedes Benz V Class</p>
+                        <div class="text-muted">
+                            <i class="fa-solid fa-user"></i>
+                            <span class="me-2">6</span>
+                            <i class="fa-solid fa-suitcase"></i>
+                            <span>6</span>
+                        </div>
+                        <div class="mt-4">
+                            <a class="btn text-uppercase rounded" href="availability.html">Book Your Trip Now</a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+    </section>
+
 
     <!-- Font Awesome icons (free version)-->
     <script src="https://use.fontawesome.com/releases/v6.1.0/js/all.js" crossorigin="anonymous"></script>
