Created testimonials section

--- a/index.html
+++ b/index.html
@@ -148,7 +148,9 @@
                     <div class="services-item">
                         <a class="services-link" href="special-occasions.html">
 
-                            <img class="img-fluid" src="https://res.cloudinary.com/irissmok/image/upload/v1681448863/Platinum%20Line%20images/special-occasions-normal_rjqxxw.webp" alt="Special Occasion">
+                            <img class="img-fluid"
+                                src="https://res.cloudinary.com/irissmok/image/upload/v1681448863/Platinum%20Line%20images/special-occasions-normal_rjqxxw.webp"
+                                alt="Special Occasion">
                             <div class="services-caption">
                                 <div class="services-caption-heading text-uppercase">Special occasion</div>
                                 <div class="services-caption-subheading">An Extra Dimension to Your special day</div>
@@ -254,7 +256,8 @@
                     <div class="our-fleet-img">
                         <a href="#car-spec">
 
-                            <img src="https://res.cloudinary.com/irissmok/image/upload/v1668123198/Platinum%20Line%20images/our-fleet-s-e_lenprv.webp" alt="Mercedes Benz E Class">
+                            <img src="https://res.cloudinary.com/irissmok/image/upload/v1668123198/Platinum%20Line%20images/our-fleet-s-e_lenprv.webp"
+                                alt="Mercedes Benz E Class">
                         </a>
                         <p class="text-uppercase"> Mercedes Benz E Class</p>
                         <div class="text-muted">
@@ -271,7 +274,8 @@
                 <div class="col-sm-12 col-md-4">
                     <div class="our-fleet-img">
                         <a href="#car-spec">
-                            <img src="https://res.cloudinary.com/irissmok/image/upload/v1668123198/Platinum%20Line%20images/our-fleet-s-e_lenprv.webp" alt="Mercedes Benz S Class">
+                            <img src="https://res.cloudinary.com/irissmok/image/upload/v1668123198/Platinum%20Line%20images/our-fleet-s-e_lenprv.webp"
+                                alt="Mercedes Benz S Class">
                         </a>
 
                         <p class="text-uppercase"> Mercedes Benz S Class</p>
@@ -290,7 +294,8 @@
                     <div class="our-fleet-img">
                         <a href="#car-spec">
 
-                            <img src="https://res.cloudinary.com/irissmok/image/upload/v1668123198/Platinum%20Line%20images/our-fleet-v_nrz1xw.webp" alt="Mercedes Benz V Class">
+                            <img src="https://res.cloudinary.com/irissmok/image/upload/v1668123198/Platinum%20Line%20images/our-fleet-v_nrz1xw.webp"
+                                alt="Mercedes Benz V Class">
                         </a>
                         <p class="text-uppercase"> Mercedes Benz V Class</p>
                         <div class="text-muted">
@@ -308,6 +313,102 @@
         </div>
 
     </section>
+
+    <!-- Testimonials -->
+    <section class="page-section py-4" id="testimonials">
+        <div class="container">
+            <div class="row">
+                <div class="col">
+                    <div>
+                        <h2 class="section-heading text-uppercase text-center"> Testimonials</h2>
+                        <div class="ratings text-center">
+                            <i class="fa fa-star fa-xl"></i>
+                            <i class="fa fa-star fa-xl"></i>
+                            <i class="fa fa-star fa-xl"></i>
+                            <i class="fa fa-star fa-xl"></i>
+                            <i class="fa fa-star fa-xl"></i>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col">
+                    <!-- Carousel wrapper -->
+                    <div id="carouselTestimonials" class="carousel slide text-center mt-5" data-bs-ride="carousel">
+                        <div class="carousel-inner">
+                            <div class="carousel-item active" data-bs-interval="10000">
+                                <div class="row d-flex justify-content-center">
+                                    <div class="col-lg-8 rounded p-3">
+                                        <h5 class="mb-3">Mario S.</h5>
+                                        <p>
+                                            <i class="fas fa-quote-left pe-2"></i>
+
+                                            As my first time using Platinum Limo, I have only positive things to
+                                            say. From reception and scheduling, to transportation, Mislav and his team
+                                            were very professional, accommodating, courteous and helpful. The driver
+                                            was on time and professional, and the vehicle was in great condition
+                                            and clean. Overall excellent service and would highly recommend and use
+                                            again in the future.
+                                        </p>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="carousel-item" data-bs-interval="10000">
+                                <div class="row d-flex justify-content-center">
+                                    <div class="col-lg-8 rounded p-3">
+                                        <h5 class="mb-3">Bridgette S.</h5>
+                                        <p>
+                                            <i class="fas fa-quote-left pe-2"></i>
+                                            I found Platinum Limo online and was extremely happy with their airport
+                                            car
+                                            service. On travel day the driver arrived early in a spotless car. The
+                                            return
+                                            trip from airport to
+                                            home was easily confirmed with a text as soon as my flight landed. The
+                                            driver was waiting, once again in a great Mercedes S Class. He handled my
+                                            luggage on both
+                                            ends and carried it up to second floor landing front door. I will be using
+                                            Platinum Limo for all future trips.
+                                        </p>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="carousel-item" data-bs-interval="10000">
+                                <div class="row d-flex justify-content-center">
+                                    <div class="col-lg-8 rounded p-3">
+                                        <h5 class="mb-3">Chris W.</h5>
+                                        <p>
+                                            <i class="fas fa-quote-left pe-2"></i>
+                                            Incredible and very professional.<br>
+
+                                            I had Mislav driving a client of mine on a point to point day and he was
+                                            incredible. He was punctual, communicative, and flexible when needed.
+
+                                            Any time I need a car in the Dublin area, there's no one I'd rather go with.
+
+                                            Thanks a bunch Mislav, you really made the day spectacular!
+                                        </p>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        <button class="carousel-control-prev" type="button" data-bs-target="#carouselTestimonials"
+                            data-bs-slide="prev">
+                            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                            <span class="visually-hidden">Previous</span>
+                        </button>
+                        <button class="carousel-control-next" type="button" data-bs-target="#carouselTestimonials"
+                            data-bs-slide="next">
+                            <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                            <span class="visually-hidden">Next</span>
+                        </button>
+                    </div>
+                    <!-- Carousel wrapper end -->
+                </div>
+            </div>
+        </div>
+    </section>
+
 
 
     <!-- Font Awesome icons (free version)-->
