Added footer, fixed lighthouse report, images replaced

--- a/index.html
+++ b/index.html
@@ -12,11 +12,10 @@
     <title>Platinum Limo - Chauffeur Services</title>
 
     <!-- Google Fonts -->
-    <link rel="stylesheet" media="print" onload="this.onload=null;this.removeAttribute('media');"
-        href="https://fonts.googleapis.com/css2?family=Crimson+Text:wght@600&family=Lato&display=swap">
+    <link link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Crimson+Text:wght@600&family=Lato&display=swap">
 
     <link href="assets/style.css" rel="stylesheet" type="text/css">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha2/dist/css/bootstrap.min.css" rel="stylesheet"
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha2/dist/css/bootstrap.min.css" rel="stylesheet" link="preload"
         integrity="sha384-aFq/bzH65dt+w6FI2ooMVUpc+21e0SRygnTpmBvdBgSdnuTN7QbdgL+OapgHtvPp" crossorigin="anonymous">
 
 </head>
@@ -49,8 +48,7 @@
                             <li><a class="dropdown-item" href="tours.html">Luxury Tours</a></li>
                         </ul>
                     </li>
-                    <li class="nav-item"><a class="nav-link" href="#our-fleet">Our Fleet</a></li>
-                    <li class="nav-item"><a class="nav-link" href="#testimonials">Testimonials</a></li>
+                    <li class="nav-item"><a class="nav-link" href="our-fleet.html">Our Fleet</a></li>
                     <li class="nav-item"><a class="nav-link" href="availability.html">Availability</a></li>
                     <li class="nav-item"><a class="nav-link" href="contact.html">Contact</a></li>
                 </ul>
@@ -63,7 +61,7 @@
         <div class="container">
             <div class="subheading mb-4">First-class Chauffeur Service located in Dublin, Ireland</div>
             <div class="heading text-uppercase mb-5">Your Luxury Chauffeur Service!</div>
-            <a class="btn border border-light btn-l text-uppercase rounded" href="availability.html">Book Your Trip
+            <a class="btn border border-light btn-l text-uppercase rounded mb-4" href="availability.html">Book Your Trip
                 Now</a>
 
         </div>
@@ -148,9 +146,9 @@
                     <div class="services-item">
                         <a class="services-link" href="special-occasions.html">
 
-                            <img class="img-fluid"
-                                src="https://res.cloudinary.com/irissmok/image/upload/v1681448863/Platinum%20Line%20images/special-occasions-normal_rjqxxw.webp"
-                                alt="Special Occasion">
+                            <img class="img-fluid" loading="lazy"
+                                src="https://res.cloudinary.com/irissmok/image/upload/v1681794443/Platinum%20Line%20images/special-occasions-index.webp"
+                                alt="Special Occasion"> 
                             <div class="services-caption">
                                 <div class="services-caption-heading text-uppercase">Special occasion</div>
                                 <div class="services-caption-subheading">An Extra Dimension to Your special day</div>
@@ -164,8 +162,8 @@
                         <a class="services-link" href="events.html">
 
                             <img class="img-fluid"
-                                src="https://res.cloudinary.com/irissmok/image/upload/v1668123199/Platinum%20Line%20images/events_ldsg7p.webp"
-                                alt="Events">
+                                src="https://res.cloudinary.com/irissmok/image/upload/v1681794250/Platinum%20Line%20images/events-index.webp"
+                                alt="Events" loading="lazy">
                             <div class="services-caption">
                                 <div class="services-caption-heading text-uppercase">Events</div>
                                 <div class="services-caption-subheading">Arrive in Style at Your Next Event</div>
@@ -180,7 +178,7 @@
 
                             <img class="img-fluid"
                                 src="https://res.cloudinary.com/irissmok/image/upload/v1668123224/Platinum%20Line%20images/airport-transfer_zfrxdg.webp"
-                                alt="Airport Transfer">
+                                alt="Airport Transfer" loading="lazy">
                             <div class="services-caption">
                                 <div class="services-caption-heading text-uppercase">Airport Transfer</div>
                                 <div class="services-caption-subheading">Style and Comfort From Your Front Door</div>
@@ -194,8 +192,8 @@
                         <a class="services-link" href="conference-conventions.html">
 
                             <img class="img-fluid"
-                                src="https://res.cloudinary.com/irissmok/image/upload/v1668123224/Platinum%20Line%20images/conference_hcwlfc.webp"
-                                alt="Conference & Conventions">
+                                src="https://res.cloudinary.com/irissmok/image/upload/v1681793945/Platinum%20Line%20images/conference-index.webp"
+                                alt="Conference & Conventions" loading="lazy">
                             <div class="services-caption">
                                 <div class="services-caption-heading text-uppercase">Conference & Conventions</div>
                                 <div class="services-caption-subheading">Experience Dublin's Finest Business Chauffeur
@@ -209,8 +207,8 @@
                     <div class="services-item">
                         <a class="services-link" href="corporate.html">
 
-                            <img class="img-fluid"
-                                src="https://res.cloudinary.com/irissmok/image/upload/v1668123223/Platinum%20Line%20images/corporate-services_hcbf3w.webp"
+                            <img class="img-fluid" loading="lazy"
+                                src="https://res.cloudinary.com/irissmok/image/upload/v1681794567/Platinum%20Line%20images/corporate-index_jw36qx.webp"
                                 alt="Corporate Services">
 
                             <div class="services-caption">
@@ -225,7 +223,7 @@
                     <div class="services-item">
                         <a class="services-link" href="tours.html">
 
-                            <img class="img-fluid"
+                            <img class="img-fluid" loading="lazy"
                                 src="https://res.cloudinary.com/irissmok/image/upload/v1668123223/Platinum%20Line%20images/tours_jwakkh.webp"
                                 alt="Tours">
 
@@ -256,8 +254,8 @@
                     <div class="our-fleet-img">
                         <a href="#car-spec">
 
-                            <img src="https://res.cloudinary.com/irissmok/image/upload/v1668123198/Platinum%20Line%20images/our-fleet-s-e_lenprv.webp"
-                                alt="Mercedes Benz E Class">
+                            <img src="https://res.cloudinary.com/irissmok/image/upload/v1681794846/Platinum%20Line%20images/our-fleet-s-e_index_yr2kkz.webp"
+                                alt="Mercedes Benz E Class" loading="lazy">
                         </a>
                         <p class="text-uppercase"> Mercedes Benz E Class</p>
                         <div class="text-muted">
@@ -274,8 +272,8 @@
                 <div class="col-sm-12 col-md-4">
                     <div class="our-fleet-img">
                         <a href="#car-spec">
-                            <img src="https://res.cloudinary.com/irissmok/image/upload/v1668123198/Platinum%20Line%20images/our-fleet-s-e_lenprv.webp"
-                                alt="Mercedes Benz S Class">
+                            <img src="https://res.cloudinary.com/irissmok/image/upload/v1681794846/Platinum%20Line%20images/our-fleet-s-e_index_yr2kkz.webp"
+                                alt="Mercedes Benz S Class" loading="lazy">
                         </a>
 
                         <p class="text-uppercase"> Mercedes Benz S Class</p>
@@ -294,8 +292,8 @@
                     <div class="our-fleet-img">
                         <a href="#car-spec">
 
-                            <img src="https://res.cloudinary.com/irissmok/image/upload/v1668123198/Platinum%20Line%20images/our-fleet-v_nrz1xw.webp"
-                                alt="Mercedes Benz V Class">
+                            <img src="https://res.cloudinary.com/irissmok/image/upload/v1681794846/Platinum%20Line%20images/our-fleet-v_index_qzis3g.webp"
+                                alt="Mercedes Benz V Class" loading="lazy">
                         </a>
                         <p class="text-uppercase"> Mercedes Benz V Class</p>
                         <div class="text-muted">
@@ -409,16 +407,100 @@
         </div>
     </section>
 
+<!-- Footer -->
+<footer class="footer py-4">
+    <div class="container">
+        <div class="row">
+            <div class="col-12 mb-5">
+                <div class="logo-footer">
+                    <img class="img-fluid" src="assets/images/navbar-logo.svg" alt="Platinum Limo Logo">
+                </div>
+            </div>
+            <div class="content-to-hide-sm col-md-4">
+                <h5 class="text-uppercase mb-4 text-light">
+                    Navgation
+                </h5>
+                <p>
+                    <a href="#top-page" class="text-decoration-none text-light">Home</a>
+                </p>
+                <p>
+                    <a href="#" class="text-decoration-none text-light">Services</a>
+                </p>
+                <p>
+                    <a href="#" class="text-decoration-none text-light">Our Fleet</a>
+                </p>
+                <p>
+                    <a href="availability.html" class="text-decoration-none text-light">Availability</a>
+                </p>
+                <p>
+                    <a href="contact.html" class="text-decoration-none text-light">Contact</a>
+                </p>
+            </div>
+            <div class="content-to-hide-sm col-md-4">
+                <h5 class="text-uppercase mb-4 text-light">
+                    Services
+                </h5>
+                <p>
+                    <a class="portfolio-link text-decoration-none text-light" data-bs-toggle="modal"
+                        href="#">Special Occasions</a>
+                </p>
+                <p>
+                    <a href="#" data-bs-toggle="modal"
+                        class="portfolio-link text-decoration-none text-light">Events</a>
+                </p>
+                <p>
+                    <a href="#" data-bs-toggle="modal"
+                        class="portfolio-link text-decoration-none text-light">Airport Transfer</a>
+                </p>
+                <p>
+                    <a href="#" data-bs-toggle="modal"
+                        class="portfolio-link text-decoration-none text-light">Conferences & Conventions</a>
+                </p>
+                <p>
+                    <a href="#" data-bs-toggle="modal"
+                        class="portfolio-link text-decoration-none text-light">Corporate services</a>
+                </p>
+                <p>
+                    <a href="#" data-bs-toggle="modal"
+                        class="portfolio-link text-decoration-none text-light">Luxury Tours</a>
+                </p>
+            </div>
+            <div class="col-sm-12 col-md-4 text-light">
+                <h5 class="text-uppercase mb-4 text-light">
+                    Contact us
+                </h5>
+                <p>
+                    <i class="fas fa-envelope me-3"></i>
+                    reservations@platinumlimo.ie
+                </p>
+                <p><i class="fas fa-phone me-3"></i> + 353 83 084 7748</p>
+            </div>
+            <div class="col-12">
+                <p class="text-uppercase text-light mt-5 text-center"> Copyright © Platinum Limo. Website
+                    designed by Iris Smok</p>
+            </div>
+            <div class="col-12 text-center text-uppercase footer-link-policy">
+                <a href="privacy_policy.html" class="text-decoration-none text-light me-5">Privacy Policy</a>
+                <a href="terms_conditions.html" class="text-decoration-none text-light">Terms & Condistions</a>
 
+            </div>
+            <div class="col-12 text-center mt-5">
+                <a class="btn btn-outline-light m-1" target="_blank"
+                    href="https://www.facebook.com/profile.php?id=100087923757606" role="button"><i
+                        class="fab fa-facebook-f"></i></a>
+            </div>
+        </div>
+    </div>
+</footer>
 
     <!-- Font Awesome icons (free version)-->
     <script src="https://use.fontawesome.com/releases/v6.1.0/js/all.js" crossorigin="anonymous"></script>
 
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js"
-        integrity="sha384-oBqDVmMz9ATKxIep9tiCxS/Z9fNfEXiDAYTujMAeBAsjFuCZSmKbSSUnQlmh/jp3" crossorigin="anonymous">
+        integrity="sha384-oBqDVmMz9ATKxIep9tiCxS/Z9fNfEXiDAYTujMAeBAsjFuCZSmKbSSUnQlmh/jp3" crossorigin="anonymous" link="preload">
         </script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha2/dist/js/bootstrap.min.js"
-        integrity="sha384-heAjqF+bCxXpCWLa6Zhcp4fu20XoNIA98ecBC1YkdXhszjoejr5y9Q77hIrv8R9i" crossorigin="anonymous">
+        integrity="sha384-heAjqF+bCxXpCWLa6Zhcp4fu20XoNIA98ecBC1YkdXhszjoejr5y9Q77hIrv8R9i" crossorigin="anonymous" link="preload">
         </script>
 
 </body>
