--- a/index.html
+++ b/index.html
@@ -23,15 +23,15 @@
 <body>
     <!-- Navbar -->
     <nav class="navbar navbar-expand-lg">
-        <div class="container-fluid pe-4">
+        <div class="container-fluid px-3">
             <a class="navbar-brand" href="index.html"><img src="assets/images/navbar-logo.svg" width="100%"
                     height="100%" alt="Platinum Limo logo"></a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown"
                 aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
                 <i class="fas fa-bars fa-2xl"></i>
             </button>
-            <div class="collapse navbar-collapse pr-5" id="navbarNavDropdown">
-                <ul class="navbar-nav text-uppercase ml-auto py-lg-0">
+            <div class="collapse navbar-collapse pe-5" id="navbarNavDropdown">
+                <ul class="navbar-nav text-uppercase ms-auto py-lg-0">
                     <li class="nav-item active"><a class="nav-link active" href="index.html">Home</a></li>
                     <li class="nav-item dropdown dropdown-hover">
                         <a class="nav-link dropdown-toggle" type="button" data-target="services.html"
