PLaced tahank you in in the middle, corrected errors

--- a/thankyou.html
+++ b/thankyou.html
@@ -20,8 +20,8 @@
 
 </head>
 
-<body class="h-100 bg-dark">
-    <div class="h-100 d-flex align-items-center justify-content-center">
+<body class="vh-100 bg-dark">
+    <div class="vh-100 d-flex align-items-center justify-content-center">
         <div class="dark bg-light border border-dark rounded p-3 mx-2">
             <div class="text-center">
                 <i class="fa-solid fa-circle-check text-warning"></i>
