--- a/index.html
+++ b/index.html
@@ -407,6 +407,8 @@
         </div>
     </section>
 
+
+
 <!-- Footer -->
 <footer class="footer py-4">
     <div class="container">
@@ -493,6 +495,7 @@
     </div>
 </footer>
 
+
     <!-- Font Awesome icons (free version)-->
     <script src="https://use.fontawesome.com/releases/v6.1.0/js/all.js" crossorigin="anonymous"></script>
 
@@ -502,6 +505,7 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha2/dist/js/bootstrap.min.js"
         integrity="sha384-heAjqF+bCxXpCWLa6Zhcp4fu20XoNIA98ecBC1YkdXhszjoejr5y9Q77hIrv8R9i" crossorigin="anonymous" link="preload">
         </script>
+    <script src="assets/script.js"></script>
 
 </body>
 
