--- a/special-occasions.html
+++ b/special-occasions.html
@@ -12,11 +12,13 @@
     <title>Platinum Limo - Chauffeur Services</title>
 
     <!-- Google Fonts -->
-    <link link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Crimson+Text:wght@600&family=Lato&display=swap">
+    <link link rel="stylesheet"
+        href="https://fonts.googleapis.com/css2?family=Crimson+Text:wght@600&family=Lato&display=swap">
 
     <link href="assets/style.css" rel="stylesheet" type="text/css">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha2/dist/css/bootstrap.min.css" rel="stylesheet" link="preload"
-        integrity="sha384-aFq/bzH65dt+w6FI2ooMVUpc+21e0SRygnTpmBvdBgSdnuTN7QbdgL+OapgHtvPp" crossorigin="anonymous">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha2/dist/css/bootstrap.min.css" rel="stylesheet"
+        link="preload" integrity="sha384-aFq/bzH65dt+w6FI2ooMVUpc+21e0SRygnTpmBvdBgSdnuTN7QbdgL+OapgHtvPp"
+        crossorigin="anonymous">
 
 </head>
 
@@ -33,13 +35,13 @@
             <div class="collapse navbar-collapse pr-5" id="navbarNavDropdown">
                 <ul class="navbar-nav text-uppercase ml-auto py-lg-0">
                     <li class="nav-item"><a class="nav-link" href="index.html">Home</a></li>
-                    <li class="nav-item dropdown dropdown-hover">
+                    <li class="nav-item dropdown dropdown-hover active">
                         <a class="nav-link dropdown-toggle" type="button" data-target="services.html"
                             href="services.html" data-bs-toggle="dropdown" aria-expanded="false" id="navbarDropdown">
                             Services
                         </a>
                         <ul class="dropdown-menu">
-                            <li><a class="dropdown-item" href="special-occasions.html">Special Occasions</a></li>
+                            <li><a class="dropdown-item active" href="special-occasions.html">Special Occasions</a></li>
                             <li><a class="dropdown-item" href="events.html">Events</a></li>
                             <li><a class="dropdown-item" href="airport-transfer.html">Airport Transfer</a></li>
                             <li><a class="dropdown-item" href="conference-conventions.html">Conference & Conventions</a>
@@ -50,118 +52,195 @@
                     </li>
                     <li class="nav-item"><a class="nav-link" href="our-fleet.html">Our Fleet</a></li>
                     <li class="nav-item"><a class="nav-link" href="availability.html">Availability</a></li>
-                    <li class="nav-item active"><a class="nav-link" href="contact.html">Contact</a></li>
+                    <li class="nav-item"><a class="nav-link" href="contact.html">Contact</a></li>
                 </ul>
             </div>
         </div>
     </nav>
 
     <!-- Header image -->
-    <header class="header occasions-header">
+    <header class="header-services occasions-header">
         <div class="container">
             <div class="heading text-uppercase">Special Occasions</div>
 
         </div>
     </header>
 
+    <section class="page-section pt-5">
+        <div class="container">
+            <div class="row">
+                <div class="col-sm-12 col-md-8">
+                    <div class="text-left mb-5 services-subtitle"> An Extra Dimension to Your special day</div>
+                    <div>We offer first-class, professional, and unrivaled chauffeur services for all
+                        occasions. From weddings to anniversaries,
+                        birthdays to hen parties, our friendly Transport Management Team will ensure all
+                        your needs are taken care of in the most
+                        professional manner so that you can enjoy every moment of your wonderful day!
+                        <br> <br>
+                        For a reliable and professional chauffeur service, look no further than the
+                        experts at Platinum Limo, for more information or to get a quotation, please fill out the form.
+                    </div>
+
+                    <div class="mt-4">
+                        <div>
+                            <i class="fa fas fa-check mt-2"></i>
+                            <p class="d-inline pl-2">SUPERIOR SERVICE FOR ANY SIZE EVENT</p>
+                        </div>
+
+                        <div>
+                            <i class="fa fas fa-check mt-3"></i>
+                            <p class="d-inline pl-2">LUXURY, MEETS COMFORT, WITH OUR VEHICLES TAILORED TO ALL NEEDS</p>
+                        </div>
+
+                        <div>
+                            <i class="fa fas fa-check mt-3"></i>
+                            <p class="d-inline pl-2">PROFESSIONALLY DRESSED DRIVER TO ASSIST WITH YOUR REQUIREMENTS FOR
+                                THE DAY</p>
+                        </div>
+
+                        <div>
+                            <i class="fa fas fa-check mt-3"></i>
+                            <p class="d-inline pl-2">COMPLIMENTARY WATER ON BOARD</p>
+                        </div>
 
 
+                    </div>
+
+                </div>
+                <div class="col-sm-12 col-md-4 border border-rounded p-3">
+                    <form method="post" name="contact-form" action="thankyou.html" data-netlify="true">
+                        <input type="hidden" name="subject" value="Contact Form">
+                        <div class="form-group ml-4">
+                            <div class="field">
+                                <!-- Full Name -->
+                                <label for="fullName">Full Name*</label>
+                                <input type="text" class="form-control" id="fullName" name="full_name" required>
+                            </div>
+
+                            <div class="field">
+                                <!-- Email -->
+                                <label for="email" class="mt-4">Email address*</label>
+                                <input type="email" class="form-control" id="email" name="email" required>
+                            </div>
 
 
-<!-- Footer -->
-<footer class="footer py-4">
-    <div class="container">
-        <div class="row">
-            <div class="col-12 mb-5">
-                <div class="logo-footer">
-                    <img class="img-fluid" src="assets/images/navbar-logo.svg" alt="Platinum Limo Logo">
+                            <div class="field">
+                                <!-- Message -->
+                                <label for="message" class="mt-4">Message*</label>
+                                <textarea class="form-control" id="message" rows="5" name="message" required></textarea>
+                            </div>
+
+                            <div class="field mt-4">
+                                <div data-netlify-recaptcha="true"></div>
+                            </div>
+
+                            <button type="submit" class="btn btn-dark text-uppercase mt-3 w-100">Send</button>
+                        </div>
+                    </form>
                 </div>
             </div>
-            <div class="content-to-hide-sm col-md-4">
-                <h5 class="text-uppercase mb-4 text-light">
-                    Navgation
-                </h5>
-                <p>
-                    <a href="#top-page" class="text-decoration-none text-light">Home</a>
-                </p>
-                <p>
-                    <a href="#" class="text-decoration-none text-light">Services</a>
-                </p>
-                <p>
-                    <a href="#" class="text-decoration-none text-light">Our Fleet</a>
-                </p>
-                <p>
-                    <a href="availability.html" class="text-decoration-none text-light">Availability</a>
-                </p>
-                <p>
-                    <a href="contact.html" class="text-decoration-none text-light">Contact</a>
-                </p>
-            </div>
-            <div class="content-to-hide-sm col-md-4">
-                <h5 class="text-uppercase mb-4 text-light">
-                    Services
-                </h5>
-                <p>
-                    <a class="portfolio-link text-decoration-none text-light" data-bs-toggle="modal"
-                        href="#">Special Occasions</a>
-                </p>
-                <p>
-                    <a href="#" data-bs-toggle="modal"
-                        class="portfolio-link text-decoration-none text-light">Events</a>
-                </p>
-                <p>
-                    <a href="#" data-bs-toggle="modal"
-                        class="portfolio-link text-decoration-none text-light">Airport Transfer</a>
-                </p>
-                <p>
-                    <a href="#" data-bs-toggle="modal"
-                        class="portfolio-link text-decoration-none text-light">Conferences & Conventions</a>
-                </p>
-                <p>
-                    <a href="#" data-bs-toggle="modal"
-                        class="portfolio-link text-decoration-none text-light">Corporate services</a>
-                </p>
-                <p>
-                    <a href="#" data-bs-toggle="modal"
-                        class="portfolio-link text-decoration-none text-light">Luxury Tours</a>
-                </p>
-            </div>
-            <div class="col-sm-12 col-md-4 text-light">
-                <h5 class="text-uppercase mb-4 text-light">
-                    Contact us
-                </h5>
-                <p>
-                    <i class="fas fa-envelope me-3"></i>
-                    reservations@platinumlimo.ie
-                </p>
-                <p><i class="fas fa-phone me-3"></i> + 353 83 084 7748</p>
-            </div>
-            <div class="col-12">
-                <p class="text-uppercase text-light mt-5 text-center"> Copyright © Platinum Limo. Website
-                    designed by Iris Smok</p>
-            </div>
-            <div class="col-12 text-center text-uppercase footer-link-policy">
-                <a href="privacy_policy.html" class="text-decoration-none text-light me-5">Privacy Policy</a>
-                <a href="terms_conditions.html" class="text-decoration-none text-light">Terms & Condistions</a>
+        </div>
 
-            </div>
-            <div class="col-12 text-center mt-5">
-                <a class="btn btn-outline-light m-1" target="_blank"
-                    href="https://www.facebook.com/profile.php?id=100087923757606" role="button"><i
-                        class="fab fa-facebook-f"></i></a>
+    </section>
+
+
+
+    <!-- Footer -->
+    <footer class="footer py-4">
+        <div class="container">
+            <div class="row">
+                <div class="col-12 mb-5">
+                    <div class="logo-footer">
+                        <img class="img-fluid" src="assets/images/navbar-logo.svg" alt="Platinum Limo Logo">
+                    </div>
+                </div>
+                <div class="content-to-hide-sm col-md-4">
+                    <h5 class="text-uppercase mb-4 text-light">
+                        Navgation
+                    </h5>
+                    <p>
+                        <a href="#top-page" class="text-decoration-none text-light">Home</a>
+                    </p>
+                    <p>
+                        <a href="#" class="text-decoration-none text-light">Services</a>
+                    </p>
+                    <p>
+                        <a href="#" class="text-decoration-none text-light">Our Fleet</a>
+                    </p>
+                    <p>
+                        <a href="availability.html" class="text-decoration-none text-light">Availability</a>
+                    </p>
+                    <p>
+                        <a href="contact.html" class="text-decoration-none text-light">Contact</a>
+                    </p>
+                </div>
+                <div class="content-to-hide-sm col-md-4">
+                    <h5 class="text-uppercase mb-4 text-light">
+                        Services
+                    </h5>
+                    <p>
+                        <a class="portfolio-link text-decoration-none text-light" data-bs-toggle="modal"
+                            href="#">Special Occasions</a>
+                    </p>
+                    <p>
+                        <a href="#" data-bs-toggle="modal"
+                            class="portfolio-link text-decoration-none text-light">Events</a>
+                    </p>
+                    <p>
+                        <a href="#" data-bs-toggle="modal"
+                            class="portfolio-link text-decoration-none text-light">Airport Transfer</a>
+                    </p>
+                    <p>
+                        <a href="#" data-bs-toggle="modal"
+                            class="portfolio-link text-decoration-none text-light">Conferences & Conventions</a>
+                    </p>
+                    <p>
+                        <a href="#" data-bs-toggle="modal"
+                            class="portfolio-link text-decoration-none text-light">Corporate services</a>
+                    </p>
+                    <p>
+                        <a href="#" data-bs-toggle="modal" class="portfolio-link text-decoration-none text-light">Luxury
+                            Tours</a>
+                    </p>
+                </div>
+                <div class="col-sm-12 col-md-4 text-light">
+                    <h5 class="text-uppercase mb-4 text-light">
+                        Contact us
+                    </h5>
+                    <p>
+                        <i class="fas fa-envelope me-3"></i>
+                        reservations@platinumlimo.ie
+                    </p>
+                    <p><i class="fas fa-phone me-3"></i> + 353 83 084 7748</p>
+                </div>
+                <div class="col-12">
+                    <p class="text-uppercase text-light mt-5 text-center"> Copyright © Platinum Limo. Website
+                        designed by Iris Smok</p>
+                </div>
+                <div class="col-12 text-center text-uppercase footer-link-policy">
+                    <a href="privacy_policy.html" class="text-decoration-none text-light me-5">Privacy Policy</a>
+                    <a href="terms_conditions.html" class="text-decoration-none text-light">Terms & Condistions</a>
+
+                </div>
+                <div class="col-12 text-center mt-5">
+                    <a class="btn btn-outline-light m-1" target="_blank"
+                        href="https://www.facebook.com/profile.php?id=100087923757606" role="button"><i
+                            class="fab fa-facebook-f"></i></a>
+                </div>
             </div>
         </div>
-    </div>
-</footer>
+    </footer>
 
     <!-- Font Awesome icons (free version)-->
     <script src="https://use.fontawesome.com/releases/v6.1.0/js/all.js" crossorigin="anonymous"></script>
 
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js"
-        integrity="sha384-oBqDVmMz9ATKxIep9tiCxS/Z9fNfEXiDAYTujMAeBAsjFuCZSmKbSSUnQlmh/jp3" crossorigin="anonymous" link="preload">
+        integrity="sha384-oBqDVmMz9ATKxIep9tiCxS/Z9fNfEXiDAYTujMAeBAsjFuCZSmKbSSUnQlmh/jp3" crossorigin="anonymous"
+        link="preload">
         </script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha2/dist/js/bootstrap.min.js"
-        integrity="sha384-heAjqF+bCxXpCWLa6Zhcp4fu20XoNIA98ecBC1YkdXhszjoejr5y9Q77hIrv8R9i" crossorigin="anonymous" link="preload">
+        integrity="sha384-heAjqF+bCxXpCWLa6Zhcp4fu20XoNIA98ecBC1YkdXhszjoejr5y9Q77hIrv8R9i" crossorigin="anonymous"
+        link="preload">
         </script>
 
 </body>
