Added script link to all pages

--- a/special-occasions.html
+++ b/special-occasions.html
@@ -242,6 +242,7 @@
         integrity="sha384-heAjqF+bCxXpCWLa6Zhcp4fu20XoNIA98ecBC1YkdXhszjoejr5y9Q77hIrv8R9i" crossorigin="anonymous"
         link="preload">
         </script>
+        <script src="assets/script.js"></script>
 
 </body>
 
