Added top header, changed font and header btn

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <title>Platinum Limo - Chauffeur Services</title>
 
     <!-- Google Fonts -->
-    <link link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Crimson+Text:wght@600&family=Lato&display=swap">
+    <link link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300&family=Spectral:wght@300&display=swap">
 
     <link href="assets/style.css" rel="stylesheet" type="text/css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha2/dist/css/bootstrap.min.css" rel="stylesheet" link="preload"
@@ -21,6 +21,14 @@
 </head>
 
 <body>
+
+<section class="top-header">
+    <div class="div">
+        <p><i class="fas fa-phone me-2"></i> + 353 83 084 7748</p>
+        <p><i class="fas fa-envelope me-2"></i>reservations@platinumlimo.ie </p>
+    </div>
+</section>
+
     <!-- Navbar -->
     <nav class="navbar navbar-expand-lg">
         <div class="container-fluid px-3">
@@ -52,7 +60,7 @@
                     <li class="nav-item"><a class="nav-link" href="availability.html">Availability</a></li>
                     <li class="nav-item"><a class="nav-link" href="contact.html">Contact</a></li>
                 </ul>
-            </div>
+            </div> 
         </div>
     </nav>
 
@@ -60,12 +68,13 @@
     <header class="header-image">
         <div class="container">
             <div class="subheading mb-4">First-class Chauffeur Service located in Dublin, Ireland</div>
-            <div class="heading text-uppercase mb-5">Your Luxury Chauffeur Service!</div>
-            <a class="btn border border-light btn-l text-uppercase rounded mb-4" href="availability.html">Book Your Trip
-                Now</a>
+            <div class="heading mb-5">Dublin's Luxury Chauffeur Service</div>
+            <a class="button-book mb-4" href="availability.html"> <span>Book Your Trip
+                Now</span></a>
 
         </div>
     </header>
+
 
     <!-- Introduction -->
     <section class="introduction-section page-section pb-0">
