Buttons fixed, design, added top-header across all pages, top-header replaced with div element -js

--- a/index.html
+++ b/index.html
@@ -22,12 +22,12 @@
 
 <body>
 
-<section class="top-header">
+<div class="top-header">
     <div class="div">
         <p><i class="fas fa-phone me-2"></i> + 353 83 084 7748</p>
         <p><i class="fas fa-envelope me-2"></i>reservations@platinumlimo.ie </p>
     </div>
-</section>
+</div>
 
     <!-- Navbar -->
     <nav class="navbar navbar-expand-lg">
@@ -69,7 +69,7 @@
         <div class="container">
             <div class="subheading mb-4">First-class Chauffeur Service located in Dublin, Ireland</div>
             <div class="heading mb-5">Dublin's Luxury Chauffeur Service</div>
-            <a class="button-book mb-4" href="availability.html"> <span>Book Your Trip
+            <a class="button-book-trip mb-4" href="availability.html"> <span>Book Your Trip
                 Now</span></a>
 
         </div>
@@ -274,7 +274,7 @@
                             <span>3</span>
                         </div>
                         <div class="mt-4">
-                            <a class="btn text-uppercase rounded" href="availability.html">Book Your Trip Now</a>
+                            <a class="btn rounded" href="availability.html">Book Your Trip Now</a>
                         </div>
                     </div>
                 </div>
@@ -293,7 +293,7 @@
                             <span>3</span>
                         </div>
                         <div class="mt-4">
-                            <a class="btn text-uppercase rounded" href="availability.html">Book Your Trip Now</a>
+                            <a class="btn rounded" href="availability.html">Book Your Trip Now</a>
                         </div>
                     </div>
                 </div>
@@ -312,7 +312,7 @@
                             <span>6</span>
                         </div>
                         <div class="mt-4">
-                            <a class="btn text-uppercase rounded" href="availability.html">Book Your Trip Now</a>
+                            <a class="btn rounded" href="availability.html">Book Your Trip Now</a>
                         </div>
                     </div>
                 </div>
