--- a/availability.html
+++ b/availability.html
@@ -12,8 +12,7 @@
     <title>Platinum Limo - Chauffeur Services</title>
 
     <!-- Google Fonts -->
-    <link link rel="stylesheet"
-        href="https://fonts.googleapis.com/css2?family=Crimson+Text:wght@600&family=Lato&display=swap">
+    <link link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300&family=Spectral:wght@300&display=swap">
 
     <link href="assets/style.css" rel="stylesheet" type="text/css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha2/dist/css/bootstrap.min.css" rel="stylesheet"
@@ -23,6 +22,12 @@
 </head>
 
 <body>
+    <div class="top-header">
+        <div class="div">
+            <p><i class="fas fa-phone me-2"></i> + 353 83 084 7748</p>
+            <p><i class="fas fa-envelope me-2"></i>reservations@platinumlimo.ie </p>
+        </div>
+    </div>
     <!-- Navbar -->
     <nav class="navbar navbar-expand-lg">
         <div class="container-fluid pe-4">
@@ -61,7 +66,7 @@
     <!-- Header image -->
     <header class="header-forms">
         <div class="container">
-            <div class="heading text-uppercase">Request Availability</div>
+            <div class="heading">Request Availability</div>
 
         </div>
     </header>
