--- a/special-occasions.html
+++ b/special-occasions.html
@@ -23,6 +23,12 @@
 </head>
 
 <body>
+    <div class="top-header">
+        <div class="div">
+            <p><i class="fas fa-phone me-2"></i> + 353 83 084 7748</p>
+            <p><i class="fas fa-envelope me-2"></i>reservations@platinumlimo.ie </p>
+        </div>
+    </div>
     <!-- Navbar -->
     <nav class="navbar navbar-expand-lg">
         <div class="container-fluid pe-4">
